[gd_scene load_steps=4 format=3 uid="uid://j5r3e7e0trg2"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_o7ggg"]
[ext_resource type="Theme" uid="uid://ds0v7jv413dka" path="res://themes/MainTheme.tres" id="2_q8fv2"]
[ext_resource type="Texture2D" uid="uid://21e6msxnj3p3" path="res://assets/button_green_tick.png" id="3_lqi6b"]

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o7ggg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_q8fv2")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")

[node name="VersionNumMarginContainer" type="MarginContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -129.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_bottom = 59

[node name="VersionNumLabel" type="Label" parent="PanelContainer/Panel/VersionNumMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60

[node name="AboutMeMarginContainer" type="MarginContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 59

[node name="AboutMeButton" type="Button" parent="PanelContainer/Panel/AboutMeMarginContainer"]
layout_mode = 2
text = "About me"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 300

[node name="GameTitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 150
text = "MineSweeper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 90

[node name="PlayButton" type="Button" parent="PanelContainer/VBoxContainer/MenuVBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Play
"

[node name="OptionsButton" type="Button" parent="PanelContainer/VBoxContainer/MenuVBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Options"

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer/MenuVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Exit
"

[node name="GameModeVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 60

[node name="ClassicGameModeButton" type="Button" parent="PanelContainer/VBoxContainer/GameModeVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Classic
"

[node name="BackToMenuButton" type="Button" parent="PanelContainer/VBoxContainer/GameModeVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Back"

[node name="DifficultyVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 100

[node name="EasyButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Easy
"

[node name="NormalButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Normal"

[node name="HardButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 110
text = "Hard
"

[node name="BackToGameModeButton" type="Button" parent="PanelContainer/VBoxContainer/DifficultyVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 110
text = "Back"

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 100

[node name="VibrationHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VibrationLabel" type="Label" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer/VibrationHBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Vibration"

[node name="VibrationCheckBox" type="TextureButton" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer/VibrationHBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("2_q8fv2")
texture_normal = ExtResource("3_lqi6b")

[node name="SoundHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="SoundLabel" type="Label" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer/SoundHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 80
text = "Sound"

[node name="SoundCheckButton" type="TextureButton" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer/SoundHBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("3_lqi6b")

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/OptionsVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 110
text = "back"

[node name="AboutMeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(1080, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("2_q8fv2")
theme_override_font_sizes/font_size = 62
text = "Hello!

I'm Miguel Garc√≠a (Kaizen)  I'm a web developer and I'm studying game development. 

Version (1.0.0) was made in less than a month. I'm very happy to deploy my first android project I've learnt a lot and I hope to continue learning and releasing other games soon!!!

If you like the game consider writing  some feedback so I can improve the experience.

Credit to Federico Ciuffardi for the plugin Godot Input Manager"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AboutMeMarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 59

[node name="AboutMeBackButton" type="Button" parent="PanelContainer/VBoxContainer/AboutMeMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Back"

[connection signal="pressed" from="PanelContainer/Panel/AboutMeMarginContainer/AboutMeButton" to="." method="_on_about_me_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MenuVBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MenuVBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MenuVBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GameModeVBoxContainer/ClassicGameModeButton" to="." method="_on_classic_game_mode_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/GameModeVBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyVBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyVBoxContainer/NormalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyVBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/DifficultyVBoxContainer/BackToGameModeButton" to="." method="_on_back_to_game_mode_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsVBoxContainer/VibrationHBoxContainer/VibrationCheckBox" to="." method="_on_vibration_check_box_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsVBoxContainer/SoundHBoxContainer/SoundCheckButton" to="." method="_on_sound_check_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/OptionsVBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AboutMeMarginContainer/AboutMeBackButton" to="." method="_on_about_me_back_button_pressed"]
